# PrivacyChecker

./: .gitignore
backend/: pyproject.toml
backend/backend/: main.py
diff-visualizer/: package-lock.json  package.json
diff-visualizer/src/: App.tsx  ChangeItem.tsx  ChangeList.tsx  DiffView.tsx  Filters.tsx  api.ts  types.ts
differ/: pyproject.toml
differ/differ/: config.py  diff_generator.py  diff_serializer.py  diff_tool.py  diff_visualizer.py  file_handler.py  main.py
scraper/: pyproject.toml
scraper/configs/: bumble.yaml  google.yaml
scraper/scraper/: config_loader.py  file_handler.py  logger.py  main.py  scraper_factory.py  website_config.py  website_scraper.py
scraper/scraper/scrapers/: base_scraper.py  requests_scraper.py  selenium_scraper.py
