[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matt-Hurd <matt-hurd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
